src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/lt_boolean_int.deca
// Description :
//    test lt entre un boolean et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, int, attendu: ‘int’ ou ‘float’

{
boolean a;
int b;
boolean c = a < b;
}
